--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_PORT = 3000
 DB_PORT =3306
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=
+DB_HOST=databaseqlcv.cinx5tfq2wyp.us-east-2.rds.amazonaws.com
+DB_USER=admin
+DB_PASS=an25251325
 MYSQL_DB=qlcv
 JWT_TOKEN=freedom
